# fit-star

./: .syntastic_cpp_config  .ycm_extra_conf.py  CMakeLists.txt  COPYING  Makefile  README.md  aic.py  run.sh
lib/boost_1.54.0/libs/iostreams/: CMakeLists.txt
lib/boost_1.55.0/: README.md
package/: Makefile
src/: .gitignore  CMakeLists.txt  aligned_pair.hpp  build_mutation_matrices.cpp  eigen_bpp.cpp  eigen_bpp.hpp  fit_kgt1.cpp  fit_star.cpp  fit_star_config.h.in  kmer_model.cpp  kmer_model.hpp  log_tricks.hpp  mutationio.pb.cc  mutationio.pb.h  mutationio.proto  protobuf_util.hpp  protobuftools.hpp  sam_util.hpp  sequence.hpp  show_mutation_matrices.cpp  star_optim.cpp  star_optim.hpp  star_tree_optimizer.cpp  star_tree_optimizer.hpp
test/: CMakeLists.txt  test-bpp-gamma.cpp  test-kmer_model.cpp  test-log_tricks.cpp  test-star_optim.cpp
testdata/: Makefile  simulate_mixture.xml  test.bam
